@startuml gui
!pragma useIntermediatePackages false

class gui.pieces.Bishop {
  image: None
}
class gui.board.Board {
  board_size: tuple
  engine: Board
  pieces: list[Piece]
  factory: Factory
}
class gui.pieces.Factory {
}
class gui.guided_ui.GuidedUI {
  board: None
  window_size: tuple
  font: Optional[Font]
  font_size: None
  players_turn: None
  simulation: None
  is_figure_selected: None
  selected_figure_position: Optional[str]
  move: Optional[Move]
  state: None
}
class gui.pieces.King {
  image: None
}
class gui.pieces.Knight {
  image: None
}
class gui.pieces.Pawn {
  image: None
}
class gui.pieces.Piece {
  position: tuple
  size: tuple
}
class gui.pieces.Queen {
  image: None
}
class gui.pieces.Rook {
  image: None
}
enum gui.guided_ui.State {
  OK: OK {static}
  InvalidMove: Invalid Move {static}
}
gui.pieces.Piece <|-- gui.pieces.Bishop
gui.board.Board *-- gui.pieces.Piece
gui.board.Board *-- gui.pieces.Factory
gui.pieces.Piece <|-- gui.pieces.King
gui.pieces.Piece <|-- gui.pieces.Knight
gui.pieces.Piece <|-- gui.pieces.Pawn
gui.pieces.Piece <|-- gui.pieces.Queen
gui.pieces.Piece <|-- gui.pieces.Rook
footer Generated by //py2puml//
@enduml

